--- a/workflow/complete_sumstat_mvsusieTWAS.ipynb
+++ b/workflow/complete_sumstat_mvsusieTWAS.ipynb
@@ -103,6 +103,9 @@
     "--cwd   \"/mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip\" \\\n",
     "--name \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
     "--container /mnt/mfs/statgen/containers/twas_latest.sif  \\\n",
+    "--\n",
+    "--\n",
+    "--\n",
     " -J 1000 -q csg -c /home/hs3163/GIT/bioworkflows/bioworkflows/admin/csg.yml &"
    ]
   },
@@ -115,12 +118,39 @@
    },
    "outputs": [],
    "source": [
-    "nohup sos dryrun /home/hs3163/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb merge \\\n",
+    "nohup sos run /home/hs3163/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb merge \\\n",
     "--molecular_pheno /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/molc_dir   \\\n",
-    "--analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/one_gene  \\\n",
-    "--cwd   \"/mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip\" \\\n",
+    "--analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/one_gene_uni  \\\n",
+    "--cwd   \"/mnt/mfs/statgen/neuro-twas/TWAS_sumstat/remerge\" \\\n",
     "--name \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
     "--container /mnt/mfs/statgen/containers/twas_latest.sif &"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82d73671-d1cb-4497-928e-40420c5c9ae0",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f2e1c82-42ea-4e7d-8194-3a12ca321555",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
+    "nohup sos run /home/hs3163/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mixture_prior.ipynb merge \\\n",
+    "--molecular_pheno /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/molc_dir_ori   \\\n",
+    "--analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/one_gene_uni  \\\n",
+    "--cwd   \"/mnt/mfs/statgen/neuro-twas/TWAS_sumstat/remerge\" \\\n",
+    "--name \"geneTpmResidualsAgeGenderAdj_rename\" \\\n",
+    "--container /mnt/mfs/statgen/containers/twas_latest.sif & "
    ]
   },
   {
@@ -473,6 +503,63 @@
     "    --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
     "    --prior /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/susie_rss.ed.rds \\\n",
     "    -J 40 -q csg -c ~/GIT/neuro-twas/code/csg.yml & -s  build &"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4200fc74-43f1-4f83-8c50-053cc3c7c909",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
+    "nohup sos run /home/hs3163/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mvSuSiE.ipynb summary_stats_analysis   \\\n",
+    "    --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/one_gene  \\\n",
+    "    --data-dir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/remerge/RDS/ \\\n",
+    "    --resid_cor /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/null_z_cor.rds \\\n",
+    "    --data-suffix \".uni_weight.rds\" \\\n",
+    "    --name \"SuSiE_rss\" \\\n",
+    "    --specicific_resid_corr \"TRUE\" \\\n",
+    "    --ld_file_prefix \"/mnt/mfs/statgen/neuro-twas/mv_wg/cache_arch/cache/\" \\\n",
+    "    --wd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/susie_rss_4/ \\\n",
+    "    --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "    --prior /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/flip/susie_rss.ed.rds \\\n",
+    "    -J 40 -q csg -c ~/GIT/neuro-twas/code/csg.yml & -s  build &"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16890aaf-ba15-49a7-b9a7-baa25765d464",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "source": [
+    "## sanity check three tissue using corrected LD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3203be7-d6b8-4dca-bce4-7a2f3201c6a5",
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": [
+    "nohup sos run /home/hs3163/GIT/bioworkflows/bioworkflows/multivariate-fine-mapping/mvSuSiE.ipynb summary_stats_analysis   \\\n",
+    "    --analysis-units /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/one_gene  \\\n",
+    "    --data-dir /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/susie_rss_sanity \\\n",
+    "    --resid_cor /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/null_z_cor_eqtl.rds \\\n",
+    "    --data-suffix \".uni_weight.rds\" \\\n",
+    "    --name \"SuSiE_rss\" \\\n",
+    "    --wd /mnt/mfs/statgen/neuro-twas/TWAS_sumstat/susie_rss_sanity \\\n",
+    "    --ld_file_prefix \"/mnt/mfs/statgen/neuro-twas/mv_wg/cache_arch/cache/\" \\\n",
+    "    --specicific_resid_corr \"TRUE\" \\\n",
+    "    --specicific_resid_corr_dir \"/mnt/mfs/statgen/neuro-twas/TWAS_sumstat/susie_rss_sanity\" \\\n",
+    "    --container /mnt/mfs/statgen/containers/twas_latest.sif \\\n",
+    "    --prior /home/hs3163/Project/Genome_prior/mixture_prior/output/susie.ed_bovy.rds \\\n",
+    "    -J 40 -q csg -c ~/GIT/neuro-twas/code/csg.yml -s build &"
    ]
   },
   {
