--- a/workflow/mv_susie.ipynb
+++ b/workflow/mv_susie.ipynb
@@ -113,144 +113,87 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[91mERROR\u001b[0m: \u001b[91mNotebook JSON is invalid: %s\u001b[0m\n",
-      "\n",
-      "\n",
       "usage: sos run mv_susie.ipynb [workflow_name | -t targets] [options] [workflow_options]\n",
-      "\n",
-      "\n",
       "  workflow_name:        Single or combined workflows defined in this script\n",
-      "\n",
-      "\n",
       "  targets:              One or more targets to generate\n",
-      "\n",
-      "\n",
       "  options:              Single-hyphen sos parameters (see \"sos run -h\" for details)\n",
-      "\n",
-      "\n",
       "  workflow_options:     Double-hyphen workflow-specific parameters\n",
       "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
       "Workflows:\n",
-      "\n",
-      "\n",
+      "  snp_exclude\n",
       "  mv_susie\n",
-      "\n",
-      "\n",
       "  mv_susie_cv\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
+      "  susie\n",
+      "  cv\n",
+      "  fusion_tf_cv\n",
+      "  fusion_tf\n",
       "\n",
       "Global Workflow Options:\n",
-      "\n",
-      "\n",
       "  --molecular-pheno-dir VAL (as path, required)\n",
-      "\n",
-      "\n",
       "                        Path to a list of molecular phenotypes that are to be\n",
-      "\n",
-      "\n",
       "                        analysised, shall contains a cache file within it.\n",
-      "\n",
-      "\n",
       "  --region-list VAL (as path, required)\n",
-      "\n",
-      "\n",
-      "                        List of regions that are shared upon all three diretory\n",
-      "\n",
-      "\n",
+      "                        List of regions that are shared upon all three diretory,\n",
+      "                        needs to have ID       CHR     P0      P1, the same way\n",
+      "                        as that of the twas_fusion_susie pipeline.\n",
       "  --wd VAL (as path, required)\n",
-      "\n",
-      "\n",
       "                        Path to the work directory of this pipeline,where the\n",
-      "\n",
-      "\n",
       "                        output will be stored.\n",
-      "\n",
-      "\n",
       "  --output-path  f'{wd:a}/result'\n",
       "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
       "                        Path to store the output folder\n",
-      "\n",
-      "\n",
       "  --job-size 2 (as int)\n",
-      "\n",
-      "\n",
       "                        Specify the number of jobs per run.\n",
-      "\n",
-      "\n",
       "  --container 'gaow/twas'\n",
-      "\n",
-      "\n",
       "                        Container option for software to run the analysis:\n",
-      "\n",
-      "\n",
       "                        docker or singularity\n",
-      "\n",
-      "\n",
       "  --name-prefix chr\n",
-      "\n",
-      "\n",
       "                        name prefix of the molecular_pheno\n",
-      "\n",
-      "\n",
       "  --impute TRUE\n",
-      "\n",
-      "\n",
       "                        Whether impute the missing values\n",
-      "\n",
-      "\n",
       "  --testing-prop 0.2 (as float)\n",
-      "\n",
-      "\n",
       "                        propotion of samples set into testing, set to zero if no\n",
-      "\n",
-      "\n",
       "                        cv are needed.\n",
-      "\n",
-      "\n",
       "  --cv-times 100 (as int)\n",
-      "\n",
-      "\n",
       "                        Number of training & testing samples used\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
+      "  --mixture-prior NULL\n",
+      "                        Prior: list of prior of cov structure, an RDS file that\n",
+      "                        is a list with an element \"U\" containing the cov\n",
+      "                        structurer and an element \"w\" containintg the weights\n",
+      "                        Preferably the output of wgs_prior_genome pipeline.\n",
+      "  --extract-snp VAL (as path, required)\n",
+      "                        SNPs to be included in the final analysis\n",
+      "  --MAF 0.01 (as float)\n",
+      "                        Minor allele frequency that are used to filter X\n",
       "\n",
       "Sections\n",
-      "\n",
-      "\n",
-      "  mv_susie_1, mv_susie_cv_1:\n",
-      "\n",
-      "\n",
-      "  mv_susie_2, mv_susie_cv_2:\n",
-      "\n",
-      "\n",
-      "  mv_susie_cv_3:\n",
-      "\n",
-      "\n",
+      "  snp_exclude_1, mv_susie_1, mv_susie_cv_1:\n",
+      "  snp_exclude_2:\n",
+      "    Workflow Options:\n",
+      "      --bed-list VAL (as path, required)\n",
+      "  mv_susie_2, mv_susie_cv_2, susie:\n",
+      "  mv_susie_cv_3, cv:\n",
       "  mv_susie_3:\n",
-      "\n",
-      "\n",
       "  mv_susie_cv_4:\n",
-      "\n",
-      "\n"
+      "  fusion_tf_cv_1:       Create wgs.RDat file\n",
+      "  fusion_tf_1:          Create wgs.RDat file\n",
+      "  fusion_tf_cv_2:\n",
+      "  fusion_tf_2:\n"
      ]
     }
    ],
    "source": [
     "!sos run mv_susie.ipynb -h"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -471,6 +414,15 @@
     "          --out $[_output[1]:n] \\\n",
     "          --allow-no-sex \\"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "kernel": "SoS"
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
