--- a/workflow/twas_fusion.ipynb
+++ b/workflow/twas_fusion.ipynb
@@ -621,7 +621,7 @@
     "geno_file = get_genotype_file(_chrom_list, genotype_list, geno_inventory)\n",
     "task: trunk_workers = 1, trunk_size = job_size, walltime = '4h',  mem = asso_mem, tags = f'{step_name}_{_output[0]:bn}'\n",
     "bash: expand= \"$[ ]\", stderr = f'{_output:n}.stderr', stdout = f'{_output:n}.stdout', container = container, volumes = [f'{geno_file:and}:{geno_file:and}']\n",
-    "    FUSION.assoc_test.R \\\n",
+    "    Rscript FUSION.assoc_test.R \\\n",
     "    --sumstats $[_input] \\\n",
     "    --weights $[weights_list] \\\n",
     "    --weights_dir / \\\n",
@@ -718,7 +718,7 @@
      "sos"
     ]
    ],
-   "version": "0.20.1"
+   "version": "0.22.6"
   }
  },
  "nbformat": 4,
